Correction du fichier

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
                 <tbody>  
                 <tr>
-                    <th scope="col">3</th>
-                    <th scope="col">ZIBO</th>
-                    <th scope="col">Falonne</th>
-                    <th scope="col">zibofalonne@gmail.com</th>
+                    <td scope="col">3</td>
+                    <td scope="col">ZIBO</td>
+                    <td scope="col">Falonne</td>
+                    <td scope="col">zibofalonne@gmail.com</td>
                 </tr>      
                 
             </tbody>
